[package]
name = "riblt"
version = "0.1.3"
edition = "2021"
authors = ["Sam Wighton"]
license = "MIT"
description = "A Rust implementation of the Rateless Invertable Bloom Lookup Table (RIBLT) data structure."
repository = "https://github.com/samWighton/rateless_iblt"
documentation = "https://docs.rs/riblt/latest/riblt/"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
